# rubypass

./: .gitignore  README.md  rubypass.sh
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-04-20-rubypass-gui.md
docs/superpowers/specs/: 2026-04-20-rubypass-gui-design.md
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  build.rs  rubypass.exe.manifest  tauri.conf.json
src-tauri/examples/: gateway_check.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  gateway.rs  helper.rs  lib.rs  main.rs  network_watch.rs  pac.rs  routing.rs  scheduler.rs  status.rs  updater.rs
