[package]
name = "rubypass"
version = "0.1.0"
edition = "2021"

[lib]
name = "rubypass_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
system-configuration = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
  "Win32_NetworkManagement_IpHelper",
  "Win32_NetworkManagement_Ndis",
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_Networking_WinInet"
] }

[profile.release]
opt-level = "s"
strip = true

[dev-dependencies]
tempfile = "3"
